tests/specs/class_index_signature.txt
# mod.ts
export class C {
  [key: string]: number;
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class C {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   [key: string]: number;
  |   ^

# output.txt
Defined in file:///mod.ts:1:1

class C

  [key: string]: number


# output.json
[
  {
    "name": "C",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "kind": "class",
    "classDef": {
      "isAbstract": false,
      "constructors": [],
      "properties": [],
      "indexSignatures": [
        {
          "readonly": false,
          "params": [
            {
              "kind": "identifier",
              "name": "key",
              "optional": false,
              "tsType": {
                "repr": "string",
                "kind": "keyword",
                "keyword": "string"
              }
            }
          ],
          "tsType": {
            "repr": "number",
            "kind": "keyword",
            "keyword": "number"
          },
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 19
          }
        }
      ],
      "methods": [],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
